@@ -120,6 +120,13 @@ class MemcacheFlusher extends Thread implements FlushRequester {
   
   @Override
   public void run() {
+    while (!this.server.isStopRequested() && this.server.isInSafeMode()) {
+      try {
+        Thread.sleep(threadWakeFrequency);
+      } catch (InterruptedException ex) {
+        continue;
+      }
+    }
     while (!server.isStopRequested()) {
       HRegion r = null;
       try {
